--- a/Mahamining_e-Auction/Mahamining_e-Auction.csproj
+++ b/Mahamining_e-Auction/Mahamining_e-Auction.csproj
@@ -77,8 +77,21 @@
     <Content Include="eAuctionPlotProfile.aspx" />
     <Content Include="EventDetails.aspx" />
     <Content Include="GeneratedDemandNote.aspx" />
+    <Content Include="images\AutoBid.svg" />
+    <Content Include="images\bg1.jpg" />
+    <Content Include="images\bg26.jpg" />
+    <Content Include="images\camera1.svg" />
+    <Content Include="images\gras_payment_SUCCESS.png" />
+    <Content Include="images\icons\TenderPuchased.svg" />
+    <Content Include="images\icons\TotalParticipotedEvents.svg" />
+    <Content Include="images\icons\TotalPaymentCompleted.svg" />
+    <Content Include="images\icons\TotalPoltAuctionsBidsWon.svg" />
+    <Content Include="images\ManualBid.svg" />
+    <Content Include="images\paidSuccessfully.png" />
+    <Content Include="images\RevenueDepartmentlogo.png" />
     <Content Include="images\RevenueDeptLogo.png" />
     <Content Include="images\revenue_department.png" />
+    <Content Include="images\revenue_department2.png" />
     <Content Include="images\ShauryaTechnosoftLogoSmall.png" />
     <Content Include="images\wallet_2.svg" />
     <Content Include="js\jquery-2.1.1.min.js" />
@@ -86,6 +99,7 @@
     <Content Include="LiveBidding.aspx" />
     <Content Include="login.aspx" />
     <Content Include="MakePayment.aspx" />
+    <Content Include="PaymentStatus.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -172,6 +186,13 @@
     </Compile>
     <Compile Include="OuterMaster.Master.designer.cs">
       <DependentUpon>OuterMaster.Master</DependentUpon>
+    </Compile>
+    <Compile Include="PaymentStatus.aspx.cs">
+      <DependentUpon>PaymentStatus.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PaymentStatus.aspx.designer.cs">
+      <DependentUpon>PaymentStatus.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
