design new page for sellerEditProfile.aspx

--- a/Mahamining_e-Auction/Mahamining_e-Auction.csproj
+++ b/Mahamining_e-Auction/Mahamining_e-Auction.csproj
@@ -101,6 +101,7 @@
     <Content Include="MakePayment.aspx" />
     <Content Include="PaymentHistory.aspx" />
     <Content Include="PaymentStatus.aspx" />
+    <Content Include="SellerEditProfile.aspx" />
     <Content Include="SellerProfile.aspx" />
     <Content Include="VirtualAccountDetails.aspx" />
     <Content Include="Web.config" />
@@ -205,6 +206,13 @@
       <DependentUpon>PaymentStatus.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SellerEditProfile.aspx.cs">
+      <DependentUpon>SellerEditProfile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SellerEditProfile.aspx.designer.cs">
+      <DependentUpon>SellerEditProfile.aspx</DependentUpon>
+    </Compile>
     <Compile Include="SellerProfile.aspx.cs">
       <DependentUpon>SellerProfile.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
