Designed new page for EventListToVerifyDocument.aspx

--- a/Mahamining_e-Auction/Mahamining_e-Auction.csproj
+++ b/Mahamining_e-Auction/Mahamining_e-Auction.csproj
@@ -81,6 +81,7 @@
     <Content Include="EventCreation.aspx" />
     <Content Include="EventDetails.aspx" />
     <Content Include="EventList.aspx" />
+    <Content Include="EventListToVerifyDocument.aspx" />
     <Content Include="GeneratedDemandNote.aspx" />
     <Content Include="images\AutoBid.svg" />
     <Content Include="images\bg1.jpg" />
@@ -198,6 +199,13 @@
     </Compile>
     <Compile Include="EventList.aspx.designer.cs">
       <DependentUpon>EventList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="EventListToVerifyDocument.aspx.cs">
+      <DependentUpon>EventListToVerifyDocument.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EventListToVerifyDocument.aspx.designer.cs">
+      <DependentUpon>EventListToVerifyDocument.aspx</DependentUpon>
     </Compile>
     <Compile Include="GeneratedDemandNote.aspx.cs">
       <DependentUpon>GeneratedDemandNote.aspx</DependentUpon>
