--- a/Mahamining_e-Auction/Mahamining_e-Auction.csproj
+++ b/Mahamining_e-Auction/Mahamining_e-Auction.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ApplyDigitalCertificate.aspx" />
+    <Content Include="AuctionItemDetails.aspx" />
     <Content Include="AuctionReport.aspx" />
     <Content Include="BidderRegistration.aspx" />
     <Content Include="ChangePassword.aspx" />
@@ -129,6 +130,13 @@
     </Compile>
     <Compile Include="ApplyDigitalCertificate.aspx.designer.cs">
       <DependentUpon>ApplyDigitalCertificate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AuctionItemDetails.aspx.cs">
+      <DependentUpon>AuctionItemDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AuctionItemDetails.aspx.designer.cs">
+      <DependentUpon>AuctionItemDetails.aspx</DependentUpon>
     </Compile>
     <Compile Include="AuctionReport.aspx.cs">
       <DependentUpon>AuctionReport.aspx</DependentUpon>
