--- a/Mahamining_e-Auction/Mahamining_e-Auction.csproj
+++ b/Mahamining_e-Auction/Mahamining_e-Auction.csproj
@@ -114,6 +114,7 @@
     <Content Include="OnlineAuctionDetails.aspx" />
     <Content Include="PaymentHistory.aspx" />
     <Content Include="PaymentStatus.aspx" />
+    <Content Include="PostAuctionLinks.aspx" />
     <Content Include="SellerAgreement.aspx" />
     <Content Include="SellerAgreementDocumentList.aspx" />
     <Content Include="SellerEditProfile.aspx" />
@@ -312,6 +313,13 @@
     </Compile>
     <Compile Include="PaymentStatus.aspx.designer.cs">
       <DependentUpon>PaymentStatus.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PostAuctionLinks.aspx.cs">
+      <DependentUpon>PostAuctionLinks.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PostAuctionLinks.aspx.designer.cs">
+      <DependentUpon>PostAuctionLinks.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SellerAgreement.aspx.cs">
