--- a/Mahamining_e-Auction/Mahamining_e-Auction.csproj
+++ b/Mahamining_e-Auction/Mahamining_e-Auction.csproj
@@ -122,6 +122,7 @@
     <Content Include="PaymentHistory.aspx" />
     <Content Include="PaymentStatus.aspx" />
     <Content Include="PostAuctionLinks.aspx" />
+    <Content Include="ScreenDuringAuction.aspx" />
     <Content Include="SellerAgreement.aspx" />
     <Content Include="SellerAgreementDocumentList.aspx" />
     <Content Include="SellerEditProfile.aspx" />
@@ -378,6 +379,13 @@
       <DependentUpon>PostAuctionLinks.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScreenDuringAuction.aspx.cs">
+      <DependentUpon>ScreenDuringAuction.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ScreenDuringAuction.aspx.designer.cs">
+      <DependentUpon>ScreenDuringAuction.aspx</DependentUpon>
+    </Compile>
     <Compile Include="SellerAgreement.aspx.cs">
       <DependentUpon>SellerAgreement.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
